1999-06-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (jdkdosdir): Remove.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (EXPORT_EXTERN, IMPORT_EXTERN): Substitute.

1999-05-28  Marcus G. Daniels  <mgd@chimayo.santafe.edu>

	* protocol.el (check-common-tags): Use externvar for globals
	and remove compilcated regex qualification.

1999-05-27  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_SWARMLIBS): Replace explicit list of
	libraries with `-lswarm'.

1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.appl.in (LDFLAGS): Remove SUPPORTLDFLAGS.
	(LIBS): Remove.
	($(APPEXE)): Remove LIBS and SYSLIBS, but keep -lobjc.
	
	* genctors: New file.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SWARMMODULES): Remove.
	(SWARMLIBS): Use simply -lswarm.

1999-05-20  Alex Lancaster  <alex@santafe.edu>

	* Makefile.appl.in (install): Install actual executable to
	$(bindir)/.libs, create .libs directory if it doesn't already
	exist.

1999-05-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (_SWARMLIBS, JAVASWARMLIBS): Remove.
	(SWARMLIBS): Don't include JAVASWARMLIBS.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (jdkdosdir): Substitute.
	(JAVACLASSES): Single quote.

	* Makefile.common.in (SWARMLIBS): Add JAVASWARMLIBS after as well.

1999-05-15  Alex Lancaster  <alex@santafe.edu>

	* protocol.el (extract-doc-string): Set the substr to start after
	position 4, rather than 5, to ensure that the whitespace after the
	colon in the doc-string is considered significant.
	(append-buf): Ignore whitespace at the end of a line, so that
	contiguous text can be generated.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVAC): Substitute.

1999-05-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SUPPORTLDFLAGS): Move PNGLDFLAGS and ZLIBLDFLAGS